[gd_scene load_steps=7 format=3 uid="uid://bpilkvcv6kwcy"]

[ext_resource type="Script" path="res://scripts/obstacles/destructable_platform.gd" id="1_ebjbm"]
[ext_resource type="PackedScene" uid="uid://c4r0xs1ochlgn" path="res://assets/obstacles/destructable_platform.aseprite" id="1_uwo2t"]
[ext_resource type="AudioStream" uid="uid://bwacysaf7n4fj" path="res://assets/sound/sfx/ui/PlatformDestroy.wav" id="3_bwa2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1tp0"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38a41"]
size = Vector2(50, 18)

[sub_resource type="Curve" id="Curve_wgvfd"]
_data = [Vector2(0.0140263, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="DestructablePlatform" type="StaticBody2D" groups=["Destructable", "Obstacle"]]
script = ExtResource("1_ebjbm")
destroy_time = 3.0

[node name="AnimatedSprite2D" parent="." instance=ExtResource("1_uwo2t")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k1tp0")

[node name="TouchDetector" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchDetector"]
shape = SubResource("RectangleShape2D_38a41")

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="PoofParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(25, 10)
spread = 180.0
gravity = Vector2(2.08165e-12, 5)
initial_velocity_max = 5.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_wgvfd")

[node name="PoofSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bwa2b")
volume_db = -10.0
bus = &"SFX"

[connection signal="body_entered" from="TouchDetector" to="." method="_on_touch_detector_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
